// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`experience-button renders correctly while not selected 1`] = `
<button
  class="pf-experience-button"
  style="background-color: rgba(255, 255, 255, 0); padding-left: 0.2em;"
>
  Button
</button>
`;

exports[`experience-button renders correctly while selected 1`] = `
<button
  class="pf-experience-button"
  style="background-color: rgba(255, 255, 255, 0.1); padding-left: 1em;"
>
  Button
</button>
`;
